versao pronta de cachorro, gato e animal